tests/baselines/reference/strictModeReservedWordInModuleDeclaration.errors.txt
strictModeReservedWordInModuleDeclaration.ts(2,8): error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
strictModeReservedWordInModuleDeclaration.ts(2,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
strictModeReservedWordInModuleDeclaration.ts(3,8): error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
strictModeReservedWordInModuleDeclaration.ts(3,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
strictModeReservedWordInModuleDeclaration.ts(4,8): error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
strictModeReservedWordInModuleDeclaration.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
strictModeReservedWordInModuleDeclaration.ts(4,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
strictModeReservedWordInModuleDeclaration.ts(6,8): error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
strictModeReservedWordInModuleDeclaration.ts(6,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
strictModeReservedWordInModuleDeclaration.ts(6,16): error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
strictModeReservedWordInModuleDeclaration.ts(6,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
strictModeReservedWordInModuleDeclaration.ts(6,23): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== strictModeReservedWordInModuleDeclaration.ts (12 errors) ====
    "use strict"
    module public { }
           ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
           ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    module private { }
           ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
           ~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    module public.whatever {
           ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
           ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                  ~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    }
    module private.public.foo { }
           ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
           ~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                   ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
                   ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                          ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.